codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__plot__tests__seven_day_totals.snap
---
source: tui/src/analytics/plot_tests.rs
expression: text
---
                                                                                           711
 800                                                                         611
                                                                511                     █████████
                                                  411                     █████████     █████████
                                     311                     ████████     █████████     █████████
 400                   211                     █████████     ████████     █████████     █████████
          111                     ████████     █████████     ████████     █████████     █████████
                    █████████     ████████     █████████     ████████     █████████     █████████
       ████████     █████████     ████████     █████████     ████████     █████████     █████████
   0 ───────────────────────────────────────────────────────────────────────────────────────────────
                                                   ▲
         Jan 1        Jan 2         Jan 3        Jan 4         Jan 5        Jan 6         Jan 7

Palette:
0: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
2: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset)
3: Style::new().white().bg(Color::Reset).underline_color(Color::Reset).bold()
4: Style::new().fg(Color::Rgb(99, 168, 248)).bg(Color::Reset).underline_color(Color::Reset).bold()
5: Style::new().fg(Color::Rgb(99, 168, 248)).bg(Color::Reset).underline_color(Color::Reset).bold().underlined()
Rows (column:palette):
0: 0:0 91:1 94:0
1: 0:0 1:1 4:0 77:1 80:0
2: 0:0 64:1 67:0 88:2 97:0
3: 0:0 50:3 53:0 74:2 83:0 88:2 97:0
4: 0:0 37:1 40:0 61:2 69:0 74:2 83:0 88:2 97:0
5: 0:0 1:1 4:0 23:1 26:0 47:2 56:0 61:2 69:0 74:2 83:0 88:2 97:0
6: 0:0 10:1 13:0 34:2 42:0 47:2 56:0 61:2 69:0 74:2 83:0 88:2 97:0
7: 0:0 20:2 29:0 34:2 42:0 47:2 56:0 61:2 69:0 74:2 83:0 88:2 97:0
8: 0:0 7:2 15:0 20:2 29:0 34:2 42:0 47:2 56:0 61:2 69:0 74:2 83:0 88:2 97:0
9: 0:0 3:1 4:0 5:1
10: 0:0 51:4 52:0
11: 0:0 9:1 14:0 22:1 27:0 36:1 41:0 49:5 54:0 63:1 68:0 76:1 81:0 90:1 95:0
